[package]
name = "Rust-Game"
version = "0.0.1"
authors = ["Dylan Johnson <dylanatasmsa@gmail.com>"]

[lib]
name = "lib"
path = "src/libfolder/lib.rs"

[dependencies.little_rust_tcp]
git = "https://github.com/DylanTheVillain/Little-Rust-Tcp"

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2"
